# cargo-caterer

./: Cargo.toml  README.md
.github/workflows/: publish_binaries.yml
src/: main.rs  recipe.rs
tests/: recipe.rs  skeletons.rs
