[package]
name = "cargo-caterer"
version = "0.1.72"
authors = [
  "Luca Palmieri <lpalmieri@truelayer.com>",
  "Antoine Chauvin <antoine@aqora.io>",
]
edition = "2018"
description = "A cargo sub-command to build project dependencies for optimal Docker layer caching."
keywords = ["cargo", "docker", "caching", "dependencies"]
categories = ["development-tools::cargo-plugins", "command-line-utilities"]
repository = "https://github.com/volgar1x/cargo-caterer"
documentation = "https://docs.rs/cargo-caterer"
license = "Apache-2.0 OR MIT"
exclude = ["tests"]

[[bin]]
name = "cargo-caterer"
path = "src/main.rs"

[lib]
name = "caterer"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["cargo", "env", "derive"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
log = "0.4.11"
env_logger = "0.10"
globwalk = "0.8.0"
anyhow = "1.0.33"
pathdiff = "0.2.0"
cargo-manifest = "0.18.1"
fs-err = "2.5.0"
toml = { version = "0.8", features = ["preserve_order"] }
expect-test = "1.1.0"
cargo_metadata = "0.15"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1.0.0"
predicates = "3"
